# polywrap-substrate

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  rustfmt.toml
.github/workflows/: docker.yml  tests.yml
deployer/: Cargo.toml
deployer/src/: main.rs
examples/mycelium_usage/: Cargo.toml  index.html  serve.sh
examples/mycelium_usage/src/: lib.rs
examples/polkadot-js/: index.ts  package.json
examples/use-extension/: index.html  index.ts  package-lock.json  package.json  webpack.config.js2
graphql-substrate/: Cargo.toml
graphql-substrate/src/: lib.rs  model.rs
mycelium/: Cargo.toml  README.md  TODO.md
mycelium/examples/: add_forum_post_dynamic_decode.rs  add_forum_post_using_call.rs  add_forum_seed_content.rs  balance_transfer.rs  balance_transfer_with_tip.rs  do_something.rs  offline_extrinsic_balance.rs  pair_accounts.rs  print_metadata.rs  show_blocks.rs  show_constants.rs  show_storage_value.rs  sudo.rs  sudo_set_balance.rs  transfer_all.rs
mycelium/src/: api.rs  error.rs  lib.rs  metadata.rs  storage.rs  types.rs  utils.rs
mycelium/src/api/: balance_api.rs  base_api.rs  extrinsic_api.rs  storage_api.rs
mycelium/src/types/: account_info.rs  extrinsic_params.rs  extrinsics.rs  metadata.rs  storage.rs
mycelium/tests/: wasm_test.rs
schema/src/: graphql.schema
server/: Cargo.toml
server/src/: main.rs
starwars/: Cargo.toml
