[package]
name = "graphql-substrate"
version = "0.1.1"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2021"

[dependencies]
async-graphql = { version = "4.0.0" }
slab = "0.4.8"
node-template-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
mycelium = { path = "../mycelium" }
