[package]
name = "mycelium"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
hex = "0.4.3"
sp-core = { version = "6.0.0", default-features = false, features = ["full_crypto", "impl-serde"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
codec = { package = "parity-scale-codec", version = "3.0.0", features = ['derive'] }
frame-metadata = { version = "15.0.0", features = ["v14"] }
scale-info = { version = "2.0.1", features = ["derive", "serde"] }
thiserror = "1.0.30"
log = "0.4"
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["serde", "impl-serde"] }
# put this here to avoid the getrandom compilation error for wasm32 target
getrandom = { version = "0.2", features = ["js"] }
async-graphql = { version = "4.0.0" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
delegate = "0.7.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.18.2", features = ["full"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-test = "0.3.30"

[dev-dependencies]
node-template-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keyring = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
