[package]
name = "mycelium"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2021"
repository = "https://github.com/ivanceras/mycelium/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
hex = "0.4.3"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ['derive'] }
frame-metadata = { version = "15.0.0", features = ["v14"] }
scale-info = { version = "2.0.1", features = ["derive", "serde"] }
thiserror = "1.0.30"
log = "0.4"
# put this here to avoid the getrandom compilation error for wasm32 target
getrandom = { version = "0.2", features = ["js"] }
delegate = "0.7.0"

# substrate dep
sp-core = { version = "6.0.0", default-features = false, features = ["full_crypto", "impl-serde"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-version = { version = "5.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24", features = ["serde", "impl-serde", "std"] }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.18.2", features = ["full"] }


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-test = "0.3.30"

[dev-dependencies]
node-template-runtime = { path = "./substrate-node-template/runtime" }
pretty_env_logger = "0.4.0"
pallet-forum = { path = "./substrate-node-template/pallets/forum" }
async-recursion = "1.0.0"
anyhow = "1.0.58"
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24"}
sp-keyring = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }

[features]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-version/std",
]

[workspace]
members = [
    "examples/forum-app",
]

exclude = [
    "substrate-node-template",
]
