[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

async-graphql = { version = "4.0.0" }
async-graphql-axum = { version = "4.0.0" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
starwars = { path = "../starwars" }
hyper = "0.14"
axum = { version = "0.5.1", features = ["headers"] }
